# training-data-packer

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  main.py  merge.sh  package.sh  propella_merge.sh  pyproject.toml  structure_merge.sh  structure_propella.sh
dev-conf/runConfigurations/: Python tests in tests.run.xml
docs/: metrics.md  openeurollm.md  pipeline-baby.md  pipeline-flag.md
tests/: test_align.py  test_app.py  test_clean.py  test_decontaminate.py  test_filters.py  test_pii_masking.py  test_propella_structure.py
tests/integration/: test_collect_metrics_cli.py  test_collect_metrics_tree.py  test_integration.py  test_merge.py  test_propella_merge.py  test_propella_structure.py
tests/mode/: test_release.py
tests/processor/: test_clean.py  test_filters.py  test_parallel_merger.py  test_pii_masking.py  test_propella.py
tests/processor/sample/: test_sampler.py
tests/resources/integration/block_list/: metadata.yaml
tests/resources/integration/block_list/release-raw/shard01/: .file_01.jsonl.zst.metrics.json  file_01.jsonl.zst
tests/resources/integration/block_list/source/shard01/: file_01.jsonl.zst
tests/resources/integration/flat_release/: metadata.yaml
tests/resources/integration/flat_release/release-raw/shard01/: .file_01.jsonl.zst.metrics.json  file_01.jsonl.zst
tests/resources/integration/merge_flat_with_part/: metadata.yaml
tests/resources/integration/merge_flat_without_part_prefix/: metadata.yaml
tests/resources/integration/merge_flat_without_part_prefix/release_raw/shard01/: file_01.jsonl.zst  file_02.jsonl.zst
tests/resources/integration/merge_flat_without_part_prefix/release_raw/shard02/: file_01.jsonl.zst
tests/resources/integration/merge_tree_without_prefix/: metadata.yaml
tests/resources/integration/non_partitioned/: metadata.yaml
tests/resources/integration/non_partitioned/contamination/: file_01.jsonl  file_01.jsonl.zst
tests/resources/integration/non_partitioned/expected/: file_01.jsonl.zst
tests/resources/integration/non_partitioned/source/: file_01.jsonl  file_01.jsonl.zst
tests/resources/integration/propella_merge/: metadata.yaml
tests/resources/integration/propella_structure/: data.parquet
tests/resources/sampler/: test_sampler.py  test_sampler_error.py
tests/storage/: test_propella.py
tests/utils/: test_app.py  test_file.py  test_iterator.py  test_metadata.py  test_metrics.py  test_metrics_aggregation.py  test_misc.py  test_package.py  test_slurm.py
training_data_packer/: align.py  app.py  clean.py  collect_metrics.py  decontaminate.py  filters.py  jsonl_zst.py  merge.py  package.py  pii_masking.py  propella_merge.py  propella_structure.py  sample_register.py  sampler.py
training_data_packer/mode/: release.py  sample.py
training_data_packer/processor/: clean.py  count.py  filters.py  parallel_merger.py  pii_masking.py  propella.py
training_data_packer/processor/sample/: sampler.py
training_data_packer/storage/: counts.py  propella.py
training_data_packer/utils/: file.py  iterator.py  metadata.py  metrics.py  misc.py  slurm.py
(+7 files in other folders)
