[project]
name = "training-data-packer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "parameterized>=0.9.0",
]

[project.scripts]
oellm-package-data = "training_data_packer.app:main"

[build-system]
requires = ["uv_build>=0.7.19"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "training_data_packer"
module-root = ""

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
