[project]
name = "training-data-packer"
version = "0.1.0"
description = "Packaging annotated datasets into final training data."
authors = [
    { name = "Magnus Runesson", email = "Magnus.Runesson@ai.se" },
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
dependencies = [
    "coverage==7.14.0",
    "glom>=25.12.0",
    "loguru>=0.7.3",
    "orjson>=3.11.8",
    "pyarrow>=20.0.0",
    "pyyaml>=6.0.3",
    "zstandard>=0.25.0",
    "iso639-lang>=2.6.3",
]

[project.urls]
repository = "https://github.com/OpenEuroLLM/training-data-packer"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "parameterized>=0.9.0",
    "pre-commit>=4.6.0",

]

[project.scripts]
oellm-package-data = "training_data_packer.package:main"
oellm-package-merge = "training_data_packer.merge:main"
oellm-collect-metrics = "training_data_packer.collect_metrics:main"
oellm-propella-structure = "training_data_packer.propella_structure:main"
oellm-propella-merge = "training_data_packer.propella_merge:main"

[build-system]
requires = ["uv_build>=0.7.19"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "training_data_packer"
module-root = ""

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
ignore = [
    "C417",  # Unnecessary `map` or `filter` where a comprehension could be used
]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "parameterized>=0.9.0",
]
